# LabelerCV

./: .gitignore  CMakeLists.txt
ImgCut/: CMakeLists.txt  ImageCut.h  main.cpp
ImgResize/: CMakeLists.txt  ImageResize.cpp  ImageResize.h  main.cpp
LabelerCV/: CMakeLists.txt  LabelerCV.sln
LabelerCV/Debug/: LabelerCV.ilk  TrainValReader.ilk
LabelerCV/ImgCut/: CMakeLists.txt  ImageCut.h  main.cpp
LabelerCV/LabelerCV/: General.h  ImageRefactor.cpp  ImageRefactor.h  LabelerCV.vcxproj  LabelerCV.vcxproj.filters  Main.cpp  VideoPlayer.cpp  VideoPlayer.h
LabelerCV/LabelerCV/Debug/: vc140.idb
LabelerCV/LabelerCV/Debug/LabelerCV.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  LabelerCV.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LabelerCV/LabelerCV/Full/: trainval.txt
LabelerCV/TrainValReader/: TrainValReader.vcxproj
LabelerCV/TrainValReader/Debug/: vc140.idb
LabelerCV/TrainValReader/Debug/TrainValReader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TrainValReader.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
LabelerCV/VideoPlayer/: VideoPlayer.h  trainval.txt
TrainValReader/: CMakeLists.txt  TrainValReader.cpp
VideoPlayer/: CMakeLists.txt  VideoPlayer.cpp  VideoPlayer.h  main.cpp
